--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Earth.cs" />
+    <Compile Include="Fuel.cs" />
     <Compile Include="PersonalStatus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
