--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -47,8 +47,10 @@
     <Compile Include="Fuel.cs" />
     <Compile Include="GameOver.cs" />
     <Compile Include="PersonalStatus.cs" />
+    <Compile Include="PlanetInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ship.cs" />
     <Compile Include="UtilityMethods.cs" />
   </ItemGroup>
   <ItemGroup>
