--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
+    <Compile Include="ShipYard.cs" />
     <Compile Include="UtilityMethods.cs" />
   </ItemGroup>
   <ItemGroup>
