--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="ShipYard.cs" />
+    <Compile Include="Shop.cs" />
     <Compile Include="UtilityMethods.cs" />
   </ItemGroup>
   <ItemGroup>
