adds asgard as a class

--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asgard.cs" />
     <Compile Include="Earth.cs" />
     <Compile Include="Fuel.cs" />
     <Compile Include="GameOver.cs" />
+    <Compile Include="LandingPage.cs" />
     <Compile Include="PersonalStatus.cs" />
     <Compile Include="PlanetInfo.cs" />
     <Compile Include="Program.cs" />
