moves M63 and Alpha Centari to its own class

--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlphaCentari.cs" />
     <Compile Include="Asgard.cs" />
     <Compile Include="Earth.cs" />
     <Compile Include="Fuel.cs" />
     <Compile Include="GameOver.cs" />
     <Compile Include="LandingPage.cs" />
+    <Compile Include="M63.cs" />
     <Compile Include="PersonalStatus.cs" />
     <Compile Include="PlanetInfo.cs" />
     <Compile Include="Program.cs" />
