Changes some of the code to be a smidge cleaner

--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Earth.cs" />
     <Compile Include="Fuel.cs" />
     <Compile Include="GameOver.cs" />
+    <Compile Include="Intro.cs" />
     <Compile Include="LandingPage.cs" />
     <Compile Include="M63.cs" />
     <Compile Include="PersonalStatus.cs" />
