Add Titan class

--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Ship.cs" />
     <Compile Include="ShipYard.cs" />
     <Compile Include="Shop.cs" />
+    <Compile Include="Titan.cs" />
     <Compile Include="UtilityMethods.cs" />
   </ItemGroup>
   <ItemGroup>
